public enum GameState {
    WELCOME,PLAYING,GAME_OVER,GAME_WIN
}