@startuml

title __EXERCICEFAMEINHERITANCE's Class Diagram__\n

  namespace  {
    class DynamicSprite {
    }
  }
  

  namespace  {
    class Enemy {
    }
  }
  

  namespace  {
    enum EnemyBehaviour {
    }
  }
  

  namespace  {
    class GUI {
    }
  }
  

  namespace  {
    class GameEngine {
    }
  }
  

  namespace  {
    class GameOverScreen {
    }
  }
  

  namespace  {
    class GameRender {
    }
  }
  

  namespace  {
    enum GameState {
    }
  }
  

  namespace  {
    class Hero {
    }
  }
  

  namespace  {
    enum HeroBehaviour {
    }
  }
  

  namespace  {
    class Main {
    }
  }
  

  namespace  {
    class SolidSprite {
    }
  }
  

  namespace  {
    class Sprite {
    }
  }
  

  namespace  {
    class WelcomeScreen {
    }
  }
  

  DynamicSprite -up-|> SolidSprite
  Enemy -up-|> DynamicSprite
  Enemy o-- EnemyBehaviour : enemyBehaviour
  GUI .up.|> java.awt.event.KeyListener
  GUI -up-|> javax.swing.JFrame
  GUI o-- DynamicSprite : enemy
  GUI o-- GameEngine : gameEngine
  GUI o-- GameOverScreen : gameOverScreen
  GUI o-- GameRender : gameRender
  GUI o-- Hero : hero
  GUI o-- WelcomeScreen : welcomeScreen
  GameEngine .up.|> java.awt.event.ActionListener
  GameEngine o-- GameState : gameState
  GameEngine o-- Hero : hero
  GameEngine o-- GUI : root
  GameOverScreen -up-|> javax.swing.JPanel
  GameRender -up-|> javax.swing.JPanel
  Hero -up-|> DynamicSprite
  Hero o-- GameRender : environment
  Hero o-- HeroBehaviour : heroBehaviour
  SolidSprite -up-|> Sprite
  WelcomeScreen -up-|> javax.swing.JPanel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
